# game-spy

./: .gitignore  Dockerfile  README.md  VERCEL_DEPLOYMENT.md  docker-compose.yml  lib.py  main.py  poki.py  pyproject.toml  requirements.txt  run_server.py  setup.py  sitemap-gazer.json  vercel.json
.github/workflows/: update-data.yml
api/: index.py  requirements.txt
backend/: __init__.py  app.py  config.py  database.py  main.py  middlewares.py  models.py  poki.py  routes.py  schemas.py  utils.py
backend/lib/: README.md  data.py  sitemap.py
data/: config.yaml  games.db-shm  games.db-wal
data/change_log/: crazygames.jsonl  gamedistribution.jsonl  lagged.jsonl  onlinegames.jsonl  poki.jsonl
data/sitemaps/: gamedistribution_20250510_065741.xml  gamedistribution_20250511_190502.xml  gamedistribution_20250512_113946.xml  gamedistribution_20250513_201628.xml  gamedistribution_20250514_080506.xml  gamedistribution_20250514_160441.xml  gamedistribution_20250515_080514.xml  gamedistribution_20250515_160439.xml  gamedistribution_20250516_080456.xml  gamedistribution_20250516_160425.xml  gamedistribution_20250517_080429.xml  gamedistribution_20250517_160407.xml  gamedistribution_20250518_080430.xml  gamedistribution_20250518_160411.xml  gamedistribution_20250519_160433.xml  gamedistribution_20250520_080507.xml  gamedistribution_20250520_160440.xml  gamedistribution_20250521_080459.xml  gamedistribution_20250521_160442.xml  gamedistribution_20250522_080455.xml  (+33 more)
docs/: API.md  SUMMARY.md
frontend/: Dockerfile  README.md  nginx.conf  package.json  pnpm-lock.yaml
(+13 files in other folders)
